feat(DIS-69): added check digit active flag to ShipmentDetailResponseDTO